# kscope

./: CHANGELOG  HACKING  Makefile  README  TODO
kscope-1.6.0.orig/: AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.in  TODO  acinclude.m4  aclocal.m4  bob  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  help  kscope.kdevelop  libtool  myconfig.sh
kscope-1.6.0.orig/admin/: am_edit  cvs.sh
kscope-1.6.0.orig/doc/: Makefile  Makefile.am  Makefile.in
kscope-1.6.0.orig/doc/en/: Makefile  Makefile.am  Makefile.in  about.docbook  config_dlg.docbook  index.cache.bz2  pos_history.docbook  query_system.docbook
kscope-1.6.0.orig/po/: Makefile  Makefile.in
kscope-1.6.0.orig/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  autocompletionlayout.cpp  autocompletionlayout.h  autocompletionlayout.moc  autocompletionlayout.ui  bookmarksdlg.cpp  bookmarksdlg.h  bookmarksdlg.moc  bookmarkslayout.cpp  bookmarkslayout.h  bookmarkslayout.moc  bookmarkslayout.ui  calltreedlg.cpp  calltreedlg.h  calltreedlg.moc  calltreelayout.cpp  calltreelayout.h  calltreelayout.moc  calltreelayout.ui  calltreemanager.cpp  calltreemanager.h  calltreemanager.moc  configfrontend.cpp  configfrontend.h  configfrontend.moc  cscopefrontend.cpp  cscopefrontend.h  cscopefrontend.moc  cscopemsgdlg.cpp  cscopemsgdlg.h  cscopemsgdlg.moc  cscopemsglayout.cpp  cscopemsglayout.h  cscopemsglayout.moc  cscopemsglayout.ui  ctagsfrontend.cpp  ctagsfrontend.h  (+209 more)
kscope-1.6.0.orig/src/.deps/: autocompletionlayout.Po  bookmarksdlg.Po  bookmarkslayout.Po  calltreedlg.Po  calltreelayout.Po  calltreemanager.Po  configfrontend.Po  cscopefrontend.Po  cscopemsgdlg.Po  cscopemsglayout.Po  ctagsfrontend.Po  ctagslist.Po  dirscanner.Po  dotfrontend.Po  dotparse.Po  dotscan.Po  editormanager.Po  editorpage.Po  editortabs.Po  encoder.Po  filelist.Po  fileview.Po  fileviewlayout.Po  frontend.Po  graphedge.Po  graphnode.Po  graphprefdlg.Po  graphpreflayout.Po  graphwidget.Po  historypage.Po  historyview.Po  kscope.Po  kscopeactions.Po  kscopeconfig.Po  kscopepixmaps.Po  main.Po  makedlg.Po  makefrontend.Po  makelayout.Po  newprojectdlg.Po  (+38 more)
kscope-1.6.0.orig/templates/: h
kscope-binary-only-works-on-lucid/include/: kdemacros.h  knotifywidgetbase.h  ksslconfig.h
kscope-binary-only-works-on-lucid/include/arts/: anyref.h  arts_export.h  artsflow.h  artsflow.idl  artsversion.h  asyncstream.h  audioio.h  audiosubsys.h  buffer.h  bufferqueue.h  cache.h  cachedwav.h  common.h  connect.h  connection.h  convert.h  core.h  cpuinfo.h  datapacket.h  debug.h  delayedreturn.h  dispatcher.h  dynamicrequest.h  dynamicskeleton.h  extensionloader.h  factory.h  fft.h  flowsystem.h  (+29 more)
kscope-binary-only-works-on-lucid/lib/: libDCOP.la  libDCOP.so.4  libDCOP.so.4.2.0  libartsflow.la  libartsflow.so.1  libartsflow.so.1.0.0  libartsflow_idl.la  libartsflow_idl.so.1.0.0  libartsgslplayobject.la  libartsgslplayobject.so.0  libartsgslplayobject.so.0.0.0  libartswavplayobject.la  libartswavplayobject.so.0.0.0  libkabc.la  libkabc.so.1  libkabc.so.1.2.0  libkabc_dir.la  libkabc_dir.so.1  libkabc_dir.so.1.0.0  libkabc_file.la  libkabc_file.so.1.0.0  libkabc_ldapkio.la  libkabc_ldapkio.so.1.0.0  libkateinterfaces.la  libkateinterfaces.so.0  libkateinterfaces.so.0.0.0  libkatepartinterfaces.la  libkatepartinterfaces.so.0  libkatepartinterfaces.so.0.0.0  libkateutils.la  libkateutils.so.0.0.0  libkdecore.la  libkdecore.so.4.2.0  libkdefakes.la  libkdefakes.so.4  libkdefakes.so.4.2.0  libkdefx.la  libkdefx.so.4.2.0  libkdeinit_cupsdconf.la  libkdeinit_dcopserver.la  (+95 more)
(+128 files in other folders)
